src/antlr/AtresParser.java
// Generated from Atres.g4 by ANTLR 4.13.1

	package antlr;
	import java.util.*;
	import java.util.Scanner;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AtresParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, INT_TIPO=19, DEC_TIPO=20, STR_TIPO=21, ID=22, STRING=23, INT=24, 
		DECIMAL=25, OP_RELACIONAL=26, OP_ATRIBUICAO=27, WS=28, PV=29, AC=30, FC=31, 
		AP=32, FP=33, V=34;
	public static final int
		RULE_comeco = 0, RULE_tipo = 1, RULE_declararpv = 2, RULE_declarar = 3, 
		RULE_atribuirpv = 4, RULE_atribuir = 5, RULE_pegarpv = 6, RULE_pegar = 7, 
		RULE_mostrar = 8, RULE_comp = 9, RULE_exprcomp = 10, RULE_compstr = 11, 
		RULE_expr = 12, RULE_exprmath = 13, RULE_adcsub = 14, RULE_multdiv = 15, 
		RULE_num = 16, RULE_cmd = 17, RULE_textovariavel = 18, RULE_cond = 19, 
		RULE_paracada = 20, RULE_enquanto = 21, RULE_bloco = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"comeco", "tipo", "declararpv", "declarar", "atribuirpv", "atribuir", 
			"pegarpv", "pegar", "mostrar", "comp", "exprcomp", "compstr", "expr", 
			"exprmath", "adcsub", "multdiv", "num", "cmd", "textovariavel", "cond", 
			"paracada", "enquanto", "bloco"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'iniciar'", "'finalizar'", "'pegar'", "'mostrar'", "'=='", "'!='", 
			"'>'", "'<'", "'>='", "'<='", "'+'", "'-'", "'*'", "'/'", "'se'", "'else '", 
			"'paracada'", "'enquanto'", "'inteiro'", "'decimal'", "'texto'", null, 
			null, null, null, null, "'='", null, "';'", "'{'", "'}'", "'('", "')'", 
			"','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "INT_TIPO", "DEC_TIPO", "STR_TIPO", 
			"ID", "STRING", "INT", "DECIMAL", "OP_RELACIONAL", "OP_ATRIBUICAO", "WS", 
			"PV", "AC", "FC", "AP", "FP", "V"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Atres.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    Scanner teclado = new Scanner(System.in);
		NovasVariaveis novaV = new NovasVariaveis();
	    ValidacaoVariavel validV = new ValidacaoVariavel();
	    String codigoJava = "";
	    int escopo, tipo;
	    String id, variavelSalva;

	public AtresParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComecoContext extends ParserRuleContext {
		public TerminalNode AC() { return getToken(AtresParser.AC, 0); }
		public TerminalNode FC() { return getToken(AtresParser.FC, 0); }
		public List<BlocoContext> bloco() {
			return getRuleContexts(BlocoContext.class);
		}
		public BlocoContext bloco(int i) {
			return getRuleContext(BlocoContext.class,i);
		}
		public ComecoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comeco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterComeco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitComeco(this);
		}
	}

	public final ComecoContext comeco() throws RecognitionException {
		ComecoContext _localctx = new ComecoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_comeco);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			    escopo = 0;
			    codigoJava += "import java.util.*;\nimport java.util.Scanner;\npublic class Atres{\n";
			    
			setState(47);
			match(T__0);
			setState(48);
			match(AC);

			    escopo = 1;
			    codigoJava += "public static void main(String args[]){\nScanner teclado = new Scanner(System.in);\n";
			    
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(50);
				bloco();
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 4361977880L) != 0) );
			setState(55);
			match(FC);
			setState(56);
			match(T__1);

			    codigoJava += "}\n}";
			    System.out.println(codigoJava);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode INT_TIPO() { return getToken(AtresParser.INT_TIPO, 0); }
		public TerminalNode DEC_TIPO() { return getToken(AtresParser.DEC_TIPO, 0); }
		public TerminalNode STR_TIPO() { return getToken(AtresParser.STR_TIPO, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterTipo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitTipo(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tipo);
		try {
			setState(65);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_TIPO:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				match(INT_TIPO);

				    tipo = 0;
				    codigoJava += "int ";
				    
				}
				break;
			case DEC_TIPO:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				match(DEC_TIPO);

				    tipo = 1;
				    codigoJava += "double ";
				    
				}
				break;
			case STR_TIPO:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				match(STR_TIPO);

				    tipo = 2;
				    codigoJava += "String ";
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclararpvContext extends ParserRuleContext {
		public DeclararContext declarar() {
			return getRuleContext(DeclararContext.class,0);
		}
		public TerminalNode PV() { return getToken(AtresParser.PV, 0); }
		public DeclararpvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declararpv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterDeclararpv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitDeclararpv(this);
		}
	}

	public final DeclararpvContext declararpv() throws RecognitionException {
		DeclararpvContext _localctx = new DeclararpvContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declararpv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			declarar();
			setState(68);
			match(PV);
			codigoJava += ";\n";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclararContext extends ParserRuleContext {
		public Token ID;
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode ID() { return getToken(AtresParser.ID, 0); }
		public DeclararContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterDeclarar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitDeclarar(this);
		}
	}

	public final DeclararContext declarar() throws RecognitionException {
		DeclararContext _localctx = new DeclararContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declarar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			tipo();
			setState(72);
			((DeclararContext)_localctx).ID = match(ID);

			    NovasVariaveis nVar = new NovasVariaveis((((DeclararContext)_localctx).ID!=null?((DeclararContext)_localctx).ID.getText():null), tipo, escopo);
			    boolean declarado = validV.adiciona(nVar);
			    if(!declarado){
			        System.err.println("Variavel '"+(((DeclararContext)_localctx).ID!=null?((DeclararContext)_localctx).ID.getText():null)+"' ID de variavel esta em uso");
			        System.exit(0);
			    }
			    codigoJava += (((DeclararContext)_localctx).ID!=null?((DeclararContext)_localctx).ID.getText():null);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuirpvContext extends ParserRuleContext {
		public AtribuirContext atribuir() {
			return getRuleContext(AtribuirContext.class,0);
		}
		public TerminalNode PV() { return getToken(AtresParser.PV, 0); }
		public AtribuirpvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuirpv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterAtribuirpv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitAtribuirpv(this);
		}
	}

	public final AtribuirpvContext atribuirpv() throws RecognitionException {
		AtribuirpvContext _localctx = new AtribuirpvContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_atribuirpv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			atribuir();
			setState(76);
			match(PV);
			codigoJava += ";\n";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtribuirContext extends ParserRuleContext {
		public Token ID;
		public Token INT;
		public Token DECIMAL;
		public Token STRING;
		public List<TerminalNode> ID() { return getTokens(AtresParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(AtresParser.ID, i);
		}
		public TerminalNode OP_ATRIBUICAO() { return getToken(AtresParser.OP_ATRIBUICAO, 0); }
		public TerminalNode INT() { return getToken(AtresParser.INT, 0); }
		public TerminalNode DECIMAL() { return getToken(AtresParser.DECIMAL, 0); }
		public TerminalNode STRING() { return getToken(AtresParser.STRING, 0); }
		public PegarContext pegar() {
			return getRuleContext(PegarContext.class,0);
		}
		public ExprmathContext exprmath() {
			return getRuleContext(ExprmathContext.class,0);
		}
		public AtribuirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribuir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterAtribuir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitAtribuir(this);
		}
	}

	public final AtribuirContext atribuir() throws RecognitionException {
		AtribuirContext _localctx = new AtribuirContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atribuir);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			((AtribuirContext)_localctx).ID = match(ID);
				boolean declarado = validV.jaExiste((((AtribuirContext)_localctx).ID!=null?((AtribuirContext)_localctx).ID.getText():null));
			                variavelSalva = (((AtribuirContext)_localctx).ID!=null?((AtribuirContext)_localctx).ID.getText():null);
			             	if(!declarado){
			             	    System.err.println("A variavel '"+(((AtribuirContext)_localctx).ID!=null?((AtribuirContext)_localctx).ID.getText():null)+"' não foi declarada");
			             		System.exit(0);
			             	}
			                codigoJava += variavelSalva;
			             
			setState(81);
			match(OP_ATRIBUICAO);

			                codigoJava += " = ";
			             
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(83);
				((AtribuirContext)_localctx).ID = match(ID);
				  if(validV.busca((((AtribuirContext)_localctx).ID!=null?((AtribuirContext)_localctx).ID.getText():null)).getTipo() != validV.busca(variavelSalva).getTipo()){
				                    System.err.println("A variavel '" + variavelSalva + "' e '" + (((AtribuirContext)_localctx).ID!=null?((AtribuirContext)_localctx).ID.getText():null) + "' sao de tipos divergentes!");
				                    System.exit(0);
				                }
				                codigoJava += (((AtribuirContext)_localctx).ID!=null?((AtribuirContext)_localctx).ID.getText():null);
				             
				}
				break;
			case 2:
				{
				setState(85);
				((AtribuirContext)_localctx).INT = match(INT);
				  if(validV.busca(variavelSalva).getTipo() != 0){
				                    System.err.println("A variavel '" + variavelSalva + "' nao e do tipo inteiro!");
				                    System.exit(0);
				                 }
				                 codigoJava += (((AtribuirContext)_localctx).INT!=null?((AtribuirContext)_localctx).INT.getText():null);
				             
				}
				break;
			case 3:
				{
				setState(87);
				((AtribuirContext)_localctx).DECIMAL = match(DECIMAL);
				  if(validV.busca(variavelSalva).getTipo() != 1){
				                    System.err.println("A variavel '" + variavelSalva + "' nao e do tipo decimal!");
				                    System.exit(0);
				                }
				                codigoJava += (((AtribuirContext)_localctx).DECIMAL!=null?((AtribuirContext)_localctx).DECIMAL.getText():null);
				             
				}
				break;
			case 4:
				{
				setState(89);
				((AtribuirContext)_localctx).STRING = match(STRING);
				  if(validV.busca(variavelSalva).getTipo() != 2){
				                    System.err.println("A variavel '" + variavelSalva + "' nao e do tipo texto!");
				                    System.exit(0);
				                }
				                codigoJava += (((AtribuirContext)_localctx).STRING!=null?((AtribuirContext)_localctx).STRING.getText():null);
				             
				}
				break;
			case 5:
				{
				setState(91);
				pegar();
				  if(validV.busca(variavelSalva).getTipo() != tipo){
				                    System.err.println("o valor nao correponde ao tipo da variavel '" + variavelSalva + "'");
				                    System.exit(0);
				                 }
				             
				}
				break;
			case 6:
				{
				setState(94);
				exprmath();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PegarpvContext extends ParserRuleContext {
		public PegarContext pegar() {
			return getRuleContext(PegarContext.class,0);
		}
		public TerminalNode PV() { return getToken(AtresParser.PV, 0); }
		public PegarpvContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pegarpv; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterPegarpv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitPegarpv(this);
		}
	}

	public final PegarpvContext pegarpv() throws RecognitionException {
		PegarpvContext _localctx = new PegarpvContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pegarpv);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			pegar();
			setState(98);
			match(PV);
			codigoJava += ";\n";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PegarContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode AP() { return getToken(AtresParser.AP, 0); }
		public TerminalNode FP() { return getToken(AtresParser.FP, 0); }
		public TerminalNode STRING() { return getToken(AtresParser.STRING, 0); }
		public TerminalNode INT() { return getToken(AtresParser.INT, 0); }
		public TerminalNode DECIMAL() { return getToken(AtresParser.DECIMAL, 0); }
		public TerminalNode ID() { return getToken(AtresParser.ID, 0); }
		public PegarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pegar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterPegar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitPegar(this);
		}
	}

	public final PegarContext pegar() throws RecognitionException {
		PegarContext _localctx = new PegarContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pegar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__2);
			setState(102);
			match(AP);
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				{
				setState(103);
				match(STRING);
				 codigoJava += "teclado.next()";
				                  tipo = 2;
				                
				}
				break;
			case INT:
				{
				setState(105);
				match(INT);
				   codigoJava += "teclado.nextInt()";
				                tipo = 0;
				            
				}
				break;
			case DECIMAL:
				{
				setState(107);
				match(DECIMAL);
				 codigoJava += "teclado.nextFloat()";
				                  tipo = 1;
				                
				}
				break;
			case ID:
				{
				setState(109);
				((PegarContext)_localctx).ID = match(ID);
				 boolean declarado = validV.jaExiste((((PegarContext)_localctx).ID!=null?((PegarContext)_localctx).ID.getText():null));
				             variavelSalva = (((PegarContext)_localctx).ID!=null?((PegarContext)_localctx).ID.getText():null);
				             if(!declarado){
				                System.err.println("A variavel '" + (((PegarContext)_localctx).ID!=null?((PegarContext)_localctx).ID.getText():null) + "' não foi declarada");
				                System.exit(0);
				             }
				             else if(validV.busca((((PegarContext)_localctx).ID!=null?((PegarContext)_localctx).ID.getText():null)).getTipo() == 0){
				                tipo = 0;
				                codigoJava += "teclado.nextInt()";
				             }else if(validV.busca((((PegarContext)_localctx).ID!=null?((PegarContext)_localctx).ID.getText():null)).getTipo() == 1){
				                tipo = 1;
				                codigoJava += "teclado.nextFloat()";
				             }else{
				                tipo = 2;
				                codigoJava += "teclado.next()";
				             }

				           
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(113);
			match(FP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MostrarContext extends ParserRuleContext {
		public TerminalNode AP() { return getToken(AtresParser.AP, 0); }
		public TextovariavelContext textovariavel() {
			return getRuleContext(TextovariavelContext.class,0);
		}
		public TerminalNode FP() { return getToken(AtresParser.FP, 0); }
		public TerminalNode PV() { return getToken(AtresParser.PV, 0); }
		public MostrarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mostrar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterMostrar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitMostrar(this);
		}
	}

	public final MostrarContext mostrar() throws RecognitionException {
		MostrarContext _localctx = new MostrarContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mostrar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(T__3);
			setState(116);
			match(AP);

			            codigoJava += "System.out.println(";
			         
			setState(118);
			textovariavel(0);
			setState(119);
			match(FP);
			setState(120);
			match(PV);

			            codigoJava += ");\n";
			         
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompContext extends ParserRuleContext {
		public TerminalNode PV() { return getToken(AtresParser.PV, 0); }
		public ExprcompContext exprcomp() {
			return getRuleContext(ExprcompContext.class,0);
		}
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).enterComp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AtresListener ) ((AtresListener)listener).exitComp(this);
		}
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_comp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(123);
			exprcomp();
			}
			setState(124);
			match(PV);
			codigoJava += ";\n";
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
